--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.6.4",
     "axios": "^1.4.0",
     "immer": "^9.0.21",
+    "mockjs": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
@@ -54,6 +55,7 @@
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
     "@craco/craco": "^7.1.0",
+    "@types/mockjs": "^1.0.7",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "eslint": "^8.44.0",
