feat: 添加redux和路由守卫

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,9 @@
     "fastmock",
     "immer",
     "mockjs",
+    "Navpage",
     "Parens",
-    "Popconfirm"
+    "Popconfirm",
+    "reduxjs"
   ]
 }
