feat: 复制、粘贴、快捷键

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,14 +8,17 @@
     "antd",
     "Appstore",
     "classname",
+    "clonedeep",
     "commitlint",
     "craco",
+    "downarrow",
     "fastmock",
     "immer",
     "mockjs",
     "Navpage",
     "Parens",
     "Popconfirm",
-    "reduxjs"
+    "reduxjs",
+    "uparrow"
   ]
 }
