--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "immer": "^9.0.21",
+    "lodash.clonedeep": "^4.5.0",
     "mockjs": "^1.1.0",
     "nanoid": "^5.0.1",
     "react": "^18.2.0",
@@ -59,6 +60,7 @@
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
     "@craco/craco": "^7.1.0",
+    "@types/lodash.clonedeep": "^4.5.7",
     "@types/mockjs": "^1.0.7",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
